Rettet skrivefeil. Fjernet / flyttet noen TODOs
